Fix alignment and scrolling in Unsplash

--- a/plugins/unsplash/src/global.css
+++ b/plugins/unsplash/src/global.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.no-scrollbar {
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
